--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  role_name: consul_install
+  role_name: vault_install
   author: Felipe Rocha
-  description: Install and preconfigure Hashicorp consul
+  description: Install and preconfigure Hashicorp Vault
   company: Raipe Systems
 
   license: MIT
@@ -15,13 +15,13 @@ galaxy_info:
     - 20.04
     
   galaxy_tags:
-    - consul
+    - vault
     - hashicorp
     - ubuntu
     - install
     - configure
 
 dependencies: 
-  - src: https://github.com/felipefrocha/ansible-role-ubuntu-update.git
+  - src: https://github.com/felipefrocha/ansible-role-consul-install.git
     version: main
-    name: ubuntu_update
+    name: consul_install
